# stripe-subscriptions-migrator

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  cancel.py  config.py  docker-compose.yml  extract.py  import.py  migrate.py  npsp.py  pyproject.toml
.github/: dependabot.yml
scripts/: install-tools.sh
