[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
stripe = "^2.42.0"
environs = "^7.2.0"
pytz = "^2019.3"
fuzzywuzzy = "^0.17.0"
pydantic = "^1.4"
arrow = "^0.15.5"

[tool.poetry.dev-dependencies]
ipdb = "^0.12.3"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
