[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.black]
line-length = 140

[tool.poetry.dependencies]
python = "^3.8"
stripe = "^2"
environs = "^9"
pytz = "*"
fuzzywuzzy = "*"
pydantic = "*"
arrow = "*"
python-Levenshtein = "*"

[tool.poetry.dev-dependencies]
ipdb = "*"
black = "^20.8b1"
pre-commit = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
